--- a/blocks/profile/__specialty/profile__specialty.css
+++ b/blocks/profile/__specialty/profile__specialty.css
@@ -4,6 +4,16 @@
   font-size: 18px;
   line-height: 22px;
   grid-column: 1 / 3;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  max-width: 336px;
+}
+
+@media screen and (min-width: 560px) and (max-width: 668px) {
+  .profile__specialty {
+    max-width: 276px;
+  }
 }
 
 @media screen and (min-width: 560px) and (max-width: 768px) {
@@ -20,5 +30,6 @@
     padding-bottom: 10px;
     font-size: clamp(14px, 3vw, 18px);
     line-height: 1.18em;
+    max-width: 272px;
   }
 }
